--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,19 @@
-#cat {
-	background-image: url('../props/cat.jpg');
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
+
+body {
+  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  background-color: #E5E5E5;
+}
+
+main {
+	display: flex;
+}
+
+#field_layout span {
+	font-size: 3em;
+	font-family: BalooTamma;
+	width: 360px;
+	display: block;
 }
 
 #field {
@@ -12,11 +23,54 @@
 }
 #field td {
 	padding: 0;
-	background-color: rgba(238, 238, 210, 0.4);
+	background-color: rgba(238, 238, 210, 0.9);
 }
 #field tr:nth-child(odd) td:nth-child(even),
 #field tr:nth-child(even) td:nth-child(odd) {
-	background-color: rgba(118, 150, 86, 0.4);
+	background-color: rgba(118, 150, 86, 0.9);
+}
+
+
+#multitask_window {
+	width: 700px;
+	height: 840px;
+	background-color: #04061D;
+	border-radius: 20px;
+	display: flex;
+	font-family: Comic Sans MS;
+	flex-direction: column;
+}
+#icon_display {
+	width: 100%;
+	height: 100px;
+	background-color: #01020D;
+	border-radius: 20px 20px 0 0;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}#icon_display img {
+	height: 80px;
+	margin-top: auto;
+	margin-bottom: auto;
+	filter: brightness(0) invert(1);
+}
+#message_group {
+	width: 640px;
+	height: 80%;
+	background-color: grey;
+}
+#message_display {
+	height: 100%;
+	background-color: grey;
+	border-radius: 10px 10px 0 0;
+}
+#message_box {
+	position: relative;
+	bottom: 0;
+}#message_box input{
+	border-radius: 0 0 0 10px;
+}#message_box button{
+	border-radius: 0 0 10px 0;
 }
 
 .card_disp {
@@ -25,9 +79,9 @@
 	position: relative;
 	display: flex;
 	flex-direction: column;
-	font-size: 0.3em;
-	font-family: Belwe Bold,Georgia,Times,Times New Roman,serif;
-	font-weight: bold;
+	font-size: 0.4em;
+	font-family: CU;
+	/*font-weight: bold;*/
 	user-select: none;
 }
 .image_disp {
@@ -47,13 +101,13 @@
 }
 .attack_disp {
 	position: absolute;
-	bottom: 12.5%;
-	left: 25%;
+	bottom: 7.5%;
+	left: 20%;
 	color: white;
 }.hp_disp {
 	position: absolute;
-	bottom: 12.5%;
-	right: 25%;
+	bottom: 7.5%;
+	right: 20%;
 	color: white;
 }
 
@@ -61,4 +115,16 @@
   font-family: Noto;
   src: local("Noto Emoji"), local("Noto Color Emoji"), local("Noto"), 
        url("https://cdn.rawgit.com/googlei18n/noto-emoji/master/fonts/NotoEmoji-Regular.ttf");
+}
+@font-face { /* https://www.google.com/get/noto/#noto-emoji-zsye */
+  font-family: BalooTamma;
+  src: url("../fonts/BalooTamma-Regular.ttf");
+}
+@font-face { /* https://www.google.com/get/noto/#noto-emoji-zsye */
+  font-family: Alsina;
+  src: url("../fonts/Alsina Ultrajada.ttf");
+}
+@font-face { /* https://www.google.com/get/noto/#noto-emoji-zsye */
+  font-family: CU;
+  src: url("../fonts/Cry Uncial Regular.ttf");
 }
